<android.support.v7.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <android.support.v7.widget.AppCompatEditText
        style="@style/signup_edittext"
        android:background="@drawable/edittext"
        android:hint="name" />

    <android.support.v7.widget.AppCompatEditText
        style="@style/signup_edittext"
        android:background="@drawable/edittext"
        android:hint="address" />

    <android.support.v7.widget.AppCompatEditText
        style="@style/signup_edittext"
        android:background="@drawable/edittext"
        android:hint="@string/hint_number" />

    <android.support.v7.widget.AppCompatEditText
        style="@style/signup_edittext"
        android:background="@drawable/edittext"
        android:hint="@string/hint_password" />

    <android.support.v7.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <android.support.v7.widget.AppCompatCheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp" />

        <android.support.v7.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/terms" />

    </android.support.v7.widget.LinearLayoutCompat>

    <android.support.v7.widget.AppCompatButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/edittext"
        android:text="@string/sign_up" />

</android.support.v7.widget.LinearLayoutCompat>