<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical">

        <ImageView
            android:src="@mipmap/ic_launcher_foreground"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:paddingTop="20dp"/>

        <android.support.v7.widget.AppCompatEditText
            android:paddingTop="25dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Phone Number"/>

        <android.support.v7.widget.AppCompatEditText
            android:paddingTop="25dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Password"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="100dp">

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="match_parent" />

            <android.support.v7.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/skyBlue"
                android:text="@string/remember_me"
                android:textSize="20dp"/>

        </LinearLayout>

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="25dp"
            android:background="#87cefa"
            android:text="Login" />

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorAccent"
            android:layout_margin="25dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <Button
                    android:layout_margin="5dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/login_facebook"
                    android:drawableLeft="@mipmap/facebook"
                    android:background="@color/facebookBlueDark"/>

                <Button
                    android:layout_margin="5dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/login_google"
                    android:drawableLeft="@mipmap/google"
                    android:background="@color/white"/>

            </LinearLayout>

        </android.support.v7.widget.CardView>

        <TextView
            android:id="@+id/signUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:text="SignUp"
            android:textAlignment="center"
            android:textColor="@color/skyBlue"
            android:clickable="true"/>

        <TextView
            android:layout_margin="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/copyright"
            android:textSize="20dp"
            android:textColor="@color/skyBlue"
            android:textAlignment="center"/>

    </LinearLayout>

</ScrollView>
